--- a/www/views/matieres.html
+++ b/www/views/matieres.html
@@ -7,6 +7,13 @@
 
   <ion-content>
 
+  <ion-list>
+      <a class="item item-icon-right" href="#/matiere/{{matiere.id}}" ng-repeat="matiere in matieres">
+      {{matiere.name}}
+      <button class="button icon ion-more button-main" ng-click="openMatiereDialog($event,matiere)"></button>
+    </a>
+    </ion-list>
+
   <div class="list">
 
      <a class="item item-icon-right" href="#/matiere/{{matiere.id}}" ng-repeat="matiere in matieres">
