--- a/www/views/matieres.html
+++ b/www/views/matieres.html
@@ -7,7 +7,7 @@
 
   <ion-content>
 
-  <div class="list">
+  <div class="list" style="margin-top:20px">
 
      <a class="item item-icon-right" href="#/matiere/{{matiere.id}}" ng-repeat="matiere in matieres">
       {{matiere.name}}
