--- a/www/views/matieres.html
+++ b/www/views/matieres.html
@@ -17,5 +17,11 @@
 
   </div>
 
+  <div style="padding:20px;color:white">
+    <ul>
+      <li ng-repeat="user in users"><span ng-bind="user.email"></li>
+    </ul>
+  </div>
+
 	</ion-content>
 </ion-view>
