--- a/fe/www/views/matieres.html
+++ b/fe/www/views/matieres.html
@@ -7,8 +7,10 @@
 
   <ion-content>
 
+
  <div style="padding:20px;color:white">
     <ul>
+      <li>Emails:</li>
       <li ng-repeat="user in users"><span ng-bind="user.email"></li>
     </ul>
   </div>
