--- a/fe/www/css/style.css
+++ b/fe/www/css/style.css
@@ -17,13 +17,13 @@
 }
 ion-view {
 
-background: #0050d1; /* Old browsers */
-background: -moz-linear-gradient(top, #0050d1 0%, #385789 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#0050d1), color-stop(100%,#385789)); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top, #0050d1 0%,#385789 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top, #0050d1 0%,#385789 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top, #0050d1 0%,#385789 100%); /* IE10+ */
-background: linear-gradient(to bottom, #0050d1 0%,#385789 100%); /* W3C */
+/*background: #0050d1;
+background: -moz-linear-gradient(top, #0050d1 0%, #385789 100%);
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#0050d1), color-stop(100%,#385789));
+background: -webkit-linear-gradient(top, #0050d1 0%,#385789 100%);
+background: -o-linear-gradient(top, #0050d1 0%,#385789 100%);
+background: -ms-linear-gradient(top, #0050d1 0%,#385789 100%);
+background: linear-gradient(to bottom, #0050d1 0%,#385789 100%); */
 
 }
 ion-view#fiche.red { background-color: #FFE6E6;}
