--- a/fe/www/css/style.css
+++ b/fe/www/css/style.css
@@ -17,15 +17,15 @@
 }
 ion-view {
 
-/*background: #0050d1;
-background: -moz-linear-gradient(top, #0050d1 0%, #385789 100%);
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#0050d1), color-stop(100%,#385789));
-background: -webkit-linear-gradient(top, #0050d1 0%,#385789 100%);
-background: -o-linear-gradient(top, #0050d1 0%,#385789 100%);
-background: -ms-linear-gradient(top, #0050d1 0%,#385789 100%);
-background: linear-gradient(to bottom, #0050d1 0%,#385789 100%); */
-
+  /*background: #0050d1;
+  background: -moz-linear-gradient(top, #0050d1 0%, #385789 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#0050d1), color-stop(100%,#385789));
+  background: -webkit-linear-gradient(top, #0050d1 0%,#385789 100%);
+  background: -o-linear-gradient(top, #0050d1 0%,#385789 100%);
+  background: -ms-linear-gradient(top, #0050d1 0%,#385789 100%);
+  background: linear-gradient(to bottom, #0050d1 0%,#385789 100%); */
 }
+
 ion-view#fiche.red { background-color: #FFE6E6;}
 ion-view#fiche.yellow { background-color: #FEFFE6;}
 ion-view#fiche.green { background-color: #E6FFE8;}
@@ -36,15 +36,14 @@ ion-view#fiche #subheader { padding: 0; padding-top:1px; border:none; background
 
 .list a {
 
-font-size: 20px;
-font-family: calibri;
-background-color: #eee;
-margin: 10px 20px;
-border-radius: 8px;
-padding: 20px 20px;
-/*border: 2px solid #ddd;*/
--webkit-box-shadow: 3px 3px 5px 0px rgba(50, 50, 50, 0.75);
--moz-box-shadow:    3px 3px 5px 0px rgba(50, 50, 50, 0.75);
-box-shadow:         3px 3px 5px 0px rgba(50, 50, 50, 0.75);
+  /*font-size: 20px;
+  font-family: calibri;
+  background-color: #eee;
+  margin: 10px 20px;
+  border-radius: 8px;
+  padding: 20px 20px;
+  -webkit-box-shadow: 3px 3px 5px 0px rgba(50, 50, 50, 0.75);
+  -moz-box-shadow:    3px 3px 5px 0px rgba(50, 50, 50, 0.75);
+  box-shadow:         3px 3px 5px 0px rgba(50, 50, 50, 0.75);*/
 }
 
