--- a/fe/www/css/style.css
+++ b/fe/www/css/style.css
@@ -15,15 +15,15 @@
   color: white;
   font-size: 17px;
 }
-ion-view {
+html.prod ion-view {
 
-  /*background: #0050d1;
+  background: #0050d1;
   background: -moz-linear-gradient(top, #0050d1 0%, #385789 100%);
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#0050d1), color-stop(100%,#385789));
   background: -webkit-linear-gradient(top, #0050d1 0%,#385789 100%);
   background: -o-linear-gradient(top, #0050d1 0%,#385789 100%);
   background: -ms-linear-gradient(top, #0050d1 0%,#385789 100%);
-  background: linear-gradient(to bottom, #0050d1 0%,#385789 100%); */
+  background: linear-gradient(to bottom, #0050d1 0%,#385789 100%);
 }
 
 ion-view#fiche.red { background-color: #FFE6E6;}
@@ -34,9 +34,9 @@ ion-view#fiche.readonly #subheader {display: none}
 ion-view#fiche.readonly .has-subheader { top:44px;}
 ion-view#fiche #subheader { padding: 0; padding-top:1px; border:none; background-color: transparent; }
 
-.list a {
+html.prod .list a {
 
-  /*font-size: 20px;
+  font-size: 20px;
   font-family: calibri;
   background-color: #eee;
   margin: 10px 20px;
@@ -44,6 +44,6 @@ ion-view#fiche #subheader { padding: 0; padding-top:1px; border:none; background
   padding: 20px 20px;
   -webkit-box-shadow: 3px 3px 5px 0px rgba(50, 50, 50, 0.75);
   -moz-box-shadow:    3px 3px 5px 0px rgba(50, 50, 50, 0.75);
-  box-shadow:         3px 3px 5px 0px rgba(50, 50, 50, 0.75);*/
+  box-shadow:         3px 3px 5px 0px rgba(50, 50, 50, 0.75);
 }
 
