--- a/fe/www/lib/ckeditor/contents.css
+++ b/fe/www/lib/ckeditor/contents.css
@@ -27,10 +27,12 @@ body.blue { background-color: #E6ECFF;}
   padding-bottom: 10px;
 }
 
-.cke_editable
-{
-	font-size: 17px;
-	line-height: 1.4;
+@media (min-width: 600px) {
+  .cke_editable
+  {
+  	font-size: 17px;
+  	line-height: 1.4;
+  }
 }
 
 blockquote
