--- a/fe/www/views/matieres.html
+++ b/fe/www/views/matieres.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Classeur" cache-view="false">
+<ion-view cache-view="false">
 
   <ion-nav-buttons side="right">
     <button class="button icon-right ion-plus button-main"
