--- a/fe/www/views/fiches.html
+++ b/fe/www/views/fiches.html
@@ -14,7 +14,7 @@
 
   <div class="list" style="margin-top:20px">
 
-     <a class="item item-icon-right" href="#/fiche/{{fiche.guid}}" ng-repeat="fiche in fiches">
+     <a class="item item-icon-right" href="#/fiche/{{fiche.guid}}" ng-repeat="fiche in matiere.fiches">
       {{fiche.name}}
       <button class="button icon ion-more button-main" ng-click="openFicheDialog($event,fiche)"></button>
     </a>
