--- a/fe/www/views/login.html
+++ b/fe/www/views/login.html
@@ -4,6 +4,7 @@
   <ion-content>
   <div style="padding:20px">
     <button class="button button-calm" ng-click="login()">login</button>
+    <button class="button button-calm" ng-click="speed()">speed</button>
   </div>
   </ion-content>
 </ion-view>
