--- a/fe/scss/main.scss
+++ b/fe/scss/main.scss
@@ -15,7 +15,7 @@
   color: white;
   font-size: 17px;
 }
-html.prod ion-view {
+html.prod ion-content {
 
   background: #0050d1;
   background: -moz-linear-gradient(top, #0050d1 0%, #385789 100%);
